[metadata]
name = torpydo
version = 0.0.1
author =
    Rodolphe VALICON (Rodovali), 
    Andrei ANGHEL-PANTELIMON (anghelpandrei), 
    Mouhidir MAHMALJI, 
    Bao HAN
author_email = 39444449+Rodovali@users.noreply.github.com
description = TOR-like networking system in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rodovali/torpydo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independant

[options]
packages = torpydo
install_requires =
    cffi ==1.15.1
    cryptography ==38.0.4
    pycparser ==2.21

python_requires = >=3.11
include_package_data = True